--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.0",
     "axios": "^1.7.3",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
