--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
+    "vite-plugin-pwa": "^0.20.1",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
